src/styles/style.css
/* ----------------------------------------- reset/normalize ---------------------------------------*/
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

article,aside,details,figcaption,figure,footer,header,hgroup,nav,section,summary{display:block;}
audio,canvas,video{display:inline-block;}



/* ----------------------------------------- global ---------------------------------------*/

body, select{
    font-family: 'Open Sans', sans-serif;
    background-color:#0d5e75;
    color:#fff;
    font-size:0.9em;
}

button,
input,
select,
textarea {
    margin: 0;

    font-family: inherit;
    font-size: 100%;
}

select{
    height:40px;
    -webkit-box-shadow: unset;
            box-shadow: unset;
    border: 1px solid #fff;
    border-radius: 10px;
}
::-moz-selection,
::-webkit-selection,
::selection{
    text-shadow: none;
    color: #fff;
}

button[disabled],
input[disabled] {
    cursor:default;
}

li{
    list-style-type: none;
}

a{
    text-decoration:none;
    color:#ffffff;
}

h1{
    font-size: 4em;
    margin:0;
}

h2{
    font-size:1em;
    font-weight:600;
    padding-bottom:20px;
}

.wrapper{
    max-width: 1480px;
    margin: 40px auto;
    padding:0 20px;
}

.btn{
    cursor: pointer;
    font-weight:600;
}

/**************************
 * Header
 */

.head{
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack:center;
       -ms-flex-pack:center;
      justify-content:center;
    -webkit-box-align:baseline;
       -ms-flex-align:baseline;
           align-items:baseline;
    margin-bottom:40px;
}

.head__title-container{
    width:70%;
    -webkit-box-pack:center;
       -ms-flex-pack:center;
     justify-content:center;
    padding-left:20%;

    text-align:center;
}

.head__title-container .head__add{
    display:none;
}

.head__title-container a:hover span,
.head__title-container a:focus span,
.head__title-container a:active span{
    display:inline-block;
}

.head__title-container a:hover .head__plus,
.head__title-container a:focus .head__plus,
.head__title-container a:active .head__plus{
    display:none;
}

.head__select-container{
    display:-webkit-box;
    display:-ms-flexbox;
    display: -webkit-flex;
    display:flex;
    -webkit-box-align:baseline;
       -ms-flex-align:baseline;
          align-items:baseline;

    width:30%;
    padding-left:20px;

    text-align:right;
}

.head__style-item{
    -webkit-box-flex: 1;
        -ms-flex: 1 1 50%;
            flex: 1 1 50%;
    padding-right:20px;
}

.head--no-padding{
    padding:0;
}

/**************************
 * Navigation
 */

.main-nav{
    width: 68%;
    margin:0 auto;
}

.main-nav__wrapper{
    display:-webkit-box;
    display:-ms-flexbox;
    display: -webkit-flex;
    display:flex;
    color:#000;
    font-weight:600;
}

.main-nav__list{
    -webkit-box-flex: 2;
        -ms-flex: 2 1 25%;
            flex: 2 1 25%;
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    background-color: #fff;
    border-radius: 10px;
}

.main-nav__element{
    -webkit-box-flex:1;
        -ms-flex:1 1 50%;
            flex:1 1 50%;

    cursor: pointer;
}

.main-nav__element span{
    width: 100%;
    padding: 20px;
    display: inline-block;
}

.main-nav__finish:hover,
.main-nav__finish:focus,
.main-nav__finish.active,
.main-nav__element span:hover,
.main-nav__element span:focus,
.main-nav__element.active{
    color:#0d5e75;
}

.main-nav__finish{
    -webkit-box-flex: 1;
            -ms-flex: 1;
                flex: 1;

    margin-left:20px;
    border-radius: 10px;
    background-color: #fff;
    border: 0;

    font-weight:600;
}

/****************************
 * main
 */

.content-wrap{
    margin: 20px 0;
}

/**************************
 * notes
 */

.note{
    margin-bottom: 20px;
}

.note__container{
    display:-webkit-box;
    display:-ms-flexbox;
    display: -webkit-flex;
    display:flex;
    -ms-flex-pack: distribute;
    justify-content: space-around;
    -webkit-justify-content: space-around;

    height: 200px;
}

.note__element{
    height: 100%;
    -webkit-box-flex: 1;
        -ms-flex: 1;
            flex: 1;
}

.note__container .btn{
    height: 100%;
    width: 100%;

    background-color: #0d5e75;
    border-radius:50%;
    border:1px solid #ffffff;

    font-size: 1.5em;
    font-weight: 600;
    color:#ffffff;
}

.note__btn--smalltext{
    display:block;

    font-size:0.8em;
    font-weight: 300;
}

.note__finish-wrapper .btn{
    padding-bottom: 12%;
}

.note__container .btn:hover span,
.note__container .btn:focus span,
.note__container .btn.active span{
    display: none;
    padding-bottom:0;
}
.note__quetionmark{
    display: inline-block;
}

.btn.active .note__quetionmark{
    display:none;
}

.note__finish-wrapper .btn:hover,
.note__finish-wrapper .btn:focus,
.note__finish-wrapper .btn.active,
.note__edit-wrapper .btn:hover,
.note__edit-wrapper .btn:focus,
.note__edit-wrapper .btn.active{
    padding-bottom: 0;

    background-color:#fff;
    color: #0d5e75;
}

.note__text-wrapper{
    -webkit-box-flex: 3;
        -ms-flex: 3 1 25%;
            flex: 3 1 25%;
    display:-webkit-box;
    display:-ms-flexbox;
    display: -webkit-flex;
    display:flex;
    -ms-flex-pack: distribute;
    justify-content: space-around;
    -webkit-justify-content: space-around;
    margin:0 20px;
    border-radius:10px;

    background-color:#fff;
    color:black;
    padding:10px;
}

.note__text-element{
    -webkit-box-flex:1;
        -ms-flex:1;
            flex:1;
}

.note__text{
    -webkit-box-flex:2;
        -ms-flex:2;
            flex:2;
    overflow-y:scroll;
}

.note__rating{
    text-align: center;
}

/**
 * footer
 */


.footer{
    position:relative;
    width: 68%;
    margin: 20px auto;

    font-size:0.8em;

}
/* ----------------------------------------- Form ---------------------------------------*/
.form-wrap{
    display:-webkit-box;
    display:-ms-flexbox;
    display: -webkit-flex;
    display:flex;
    -webkit-box-orient:horizontal;
    -webkit-box-direction:normal;
        -ms-flex-direction:row;
            flex-direction:row;
    -ms-flex-pack: distribute;
        justify-content: space-around;
    height:100vh;
}
.form {
    width:68%;
}

.fieldset{
    border:none;
}

input,
textarea{
    width: 100%;
    margin:10px 0 20px;
    padding:10px;

    border:none;
    background-color:#fff;
    border-radius: 10px;
}

textarea{
    min-height:150px;
}

.form__btn{
    display:-webkit-box;
    display:-ms-flexbox;
    display: -webkit-flex;
    display:flex;
}

.form__btn .btn,
.form__btn a{
    padding: 10px;
}

.form__btn .btn{
    -webkit-box-flex:1;
        -ms-flex:1;
            flex:1;
    -ms-flex-pack:distribute;
    justify-content:space-around;
    -webkit-justify-content: space-around;
    padding: 10px;

    background-color:#0d5e75;
    border:1px solid #fff;
    border-radius: 10px;

    color:#fff;
}

.form__btn .form__btn{
    padding: 0px;
}

.form__btn .btn:first-child{
    margin-right:40px;
}
.btn--link{
    width: 100%;
    height: 100%;
    display:block;
}

.form__btn .btn:hover,
.form__btn .btn:active,
.form__btn .btn:focus,
.form__btn .form__btn .btn--link:hover,
.form__btn .form__btn .btn--link:active,
.form__btn .form__btn .btn--link:focus{
    background-color:#fff;
    color:#0d5e75;
}

/**
 * rating
 */

.hide {
    display: none;
}


.form__rating {
    text-align: left;
    font-size:1.5em;
    margin-bottom:20px;

    unicode-bidi: bidi-override;
    direction: rtl;

}

.form__rating > label {
    display: inline;
    position: relative;
    padding-right:10px;

    cursor: pointer;
    color: #000;

    text-align: left;

}

.form__rating > label:hover:before,
.form__rating > label:hover ~ label:before,
.form__rating > input.star:checked ~ label:before,
.form__rating > input.star:checked ~ label:before {
    content: "\2605";
    position: absolute;
    left: 0;

    color: #FFD700;
}

input:invalid {
    border: 2px dashed red;
}


/* ----------------------------------------- mediaQueries ---------------------------------------*/
@media (max-width: 1479px) {
    .main-nav__element span{
        padding: 10px;
    }

    .note__container .btn{
        height: 140px;
        width: 140px;

        font-size: 1em;
    }
}


@media (max-width: 1023px){
    .note__container .btn{
        height: 100px;
        width: 100px;
    }
    .head{
        -webkit-box-align:center;
            -ms-flex-align:center;
                align-items:center;
    }

    .head__select-container{
        -webkit-box-orient: vertical;
        -webkit-box-direction: normal;
            -ms-flex-direction: column;
                flex-direction: column;
        -webkit-box-align:end;
            -ms-flex-align:end;
                align-items:flex-end;
    }

    .head__style-item{
        padding:0 0 10px 0;
    }
}

@media (max-width: 768px){
    h1{
        font-size:3em;
    }
    .main-nav{
        width: 100%;
    }

    .note__container{
        -ms-flex-wrap:wrap;
            flex-wrap:wrap;

        height:auto;
    }
    .note__element{
        -webkit-box-flex: 1;
            -ms-flex: 1 1 50%;
                flex: 1 1 50%;
        -webkit-box-ordinal-group:2;
            -ms-flex-order:1;
                order:1;
    }

    .note__text-wrapper{
        -webkit-box-flex: 3;
            -ms-flex: 3 1 100%;
                flex: 3 1 100%;
        -webkit-box-ordinal-group:0;
            -ms-flex-order:-1;
                order:-1;
        min-height:200px;
        margin:20px 0 10px 0;
    }
    .note__text-wrapper:nth-child(2){
        margin-top:0;
    }
    .note__finish-wrapper .btn{
        padding-bottom:15px;
    }
    .note__edit-wrapper{
        text-align: right;
    }
    .footer{
        width:100%;
    }
}

@media (max-width: 550px){
    h1{
        font-size:2em;
    }

    .head{
        -webkit-box-orient: vertical;
        -webkit-box-direction: normal;
            -ms-flex-direction: column;
                flex-direction: column;

    }
    .head__link-container{
        padding:20px 0;
    }
    .head__select-container{
        width: 100%;
        -webkit-box-orient: horizontal;
        -webkit-box-direction: normal;
            -ms-flex-direction: row;
                flex-direction: row;
    }
    .head__style-item{
        margin:20px 10px 10px 0;
    }
}

/* ------------------------*/ /* ---------->>> other Style <<<-----------*/ /* ------------------------*/
body.black-white, .black-white select{
    font-family: 'Droid Serif', serif;
    background-color:#000;
}

.black-white .main-nav__finish:hover,
.black-white .main-nav__finish:focus,
.black-white .main-nav__finish.active,
.black-white .main-nav__element :hover,
.black-white .main-nav__element :focus,
.black-white .main-nav__element.active{
    background-color:#444;
    color:#fff;
}

.black-white .note__container .btn{
    background-color: #000;
}

.black-white .note__finish-wrapper .btn:hover,
.black-white .note__finish-wrapper .btn:focus,
.black-white .note__finish-wrapper .btn.active,
.black-white .note__edit-wrapper .btn:hover,
.black-white .note__edit-wrapper .btn:focus,
.black-white .note__edit-wrapper .btn.active{
    background-color:#fff;
    color: #000;
}

.black-white .form__btn .btn{
    background-color:#000;
    color: #fff;
}

.black-white .form__btn .btn:hover,
.black-white .form__btn .btn:active,
.black-white .form__btn .btn:focus,
.black-white .form__btn .form__cancel .btn--link:hover,
.black-white .form__btn .form__cancel .btn--link:active,
.black-white .form__btn .form__cancel .btn--link:focus {
    border-radius: 10px;
    color: #000;
}
.black-white .form__submit.btn:hover,
.black-white .form__submit.btn:active,
.black-white .form__submit.btn:focus{
    background-color: #ffffff;
}

